// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeSearchInputs should accept correct values 1`] = `
Object {
  "asker": 3850,
  "endDate": 2020-05-07T22:00:00.000Z,
  "hospitals": Array [
    3,
    2,
  ],
  "profiles": Array [
    "Personne décédée",
    "Personne pour âge osseux (hors GAV)",
  ],
  "requestedPage": 3,
  "scope": Array [],
  "startDate": 2020-05-11T22:00:00.000Z,
}
`;

exports[`normalizeSearchInputs should accept correct values next time 1`] = `
Object {
  "asker": 3850,
  "endDate": 2020-01-20T23:00:00.000Z,
  "hospitals": Array [
    1,
    2,
    3,
  ],
  "profiles": Array [
    "Victime",
    "Personne décédée",
  ],
  "startDate": 2019-12-31T23:00:00.000Z,
}
`;
